--- a/guide.bib
+++ b/guide.bib
@@ -7,7 +7,6 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
-
 @article{BarCoc13,
 	Annote = {8.13.2017
 Looking at this for coniii. Section 4.1 describes the regularized mean field stuff},
@@ -50,6 +49,20 @@ they use a method that discards clusters that do not contribute sufficiently to 
 	Pages = {1--57},
 	Title = {{Adaptive cluster expansion for the inverse Ising problem: convergence, algorithm and tests}},
 	Year = {2012}}
+
+@book{Reif:2009uf,
+author = {Reif, F},
+title = {{Fundamentals of Statistical and Thermal Physics}},
+publisher = {Waveland Press},
+year = {2009}
+}
+
+@book{Bialek:2012ueb,
+author = {Bialek, W S},
+title = {{Biophysics: Searching for Principles}},
+publisher = {Princeton University Press},
+year = {2012}
+}
 
 @article{CocMon11,
 	Annote = {Physics 
