--- a/guide_arxiv.tex
+++ b/guide_arxiv.tex
@@ -74,7 +74,7 @@ We maximize entropy but choose some important constraints indexed by $k$,
 
 With $K$ constraints, the maximum entropy problem can be solved by the method of Langrangian multipliers
 \begin{align}
-	\mathcal{L}[p] &= -\sum_s p_s\log p_s - \sum_k^K \lambda_k \sum_s p_s f_k(s)\\
+	\mathcal{L}[p] &= -\sum_s p_s\log p_s - \sum_k^K \lambda_k \sum_s p_s f_k(s)\label{eq:L}\\
 	F &= S - \br{E}\\
 	E &= -\sum_{\rm k}^K\lambda_{\rm k}f_{\rm k}(s)
 \end{align}
@@ -121,7 +121,7 @@ Fixing the the magnetizations and pairwise correlations to those observed in the
 	\br{\si}_{\rm data} &= \br{\si}\\
 	\br{\si\sj}_{\rm data} &= \br{\si\sj}
 \end{align}
-Constructing the Langrangian from Eq ??
+The Langrangian from Eq \ref{eq:L} is
 \begin{align}
 	\mathcal{L}[p] &= -\sum_s p(s)\log p(s) +\sum_{\rm \br{ij}} J_{\rm ij}\br{\si\sj} +\sum_{\rm i=1}^Nh_{\rm i}\br{\si}\\
 	\frac{\partial\mathcal{L}[p]}{\partial p(s)} &= -\log p(s)-1 +\sum_{\rm \br{ij}} J_{\rm ij}\si\sj +\sum_{\rm i=1}^Nh_{\rm i}\si\\
@@ -147,7 +147,7 @@ The na\"{i}ve approach is to write the equations from Eq \ref{eq:dkl deriv} dire
 Matching these with the data $\br{f_k}_{\rm data}$ is the purview of any standard optimization algorithm. Clearly, this approach does not scale well because the number of terms in the partition function grows exponentially with system size. For relatively small systems $n\leq15$, however, this approach is feasible on a typical desktop computer.
 %[Simple example with logical gates?]
 
-For the Ising model, the first step in the algorithm for writing down the equations is $\mathcal{O}(K^2 2^{N})$ where $K$ is the number of constraints and $N$ the number of spins. In the second step, each evaluation of the objective in the minimization algorithm will be of the same order.
+For the Ising model, the first step in the algorithm for writing down the equations is $\mathcal{O}(K 2^{N})$ where $K$ is the number of constraints and $N$ the number of spins. In the second step, each evaluation of the objective in the minimization algorithm will be of the same order.
 
 The {\tt Exact} class supplies methods for writing Eqs \ref{eq:fk-fk} into a file and solving them with the {\tt scipy.optimize} library.
 
@@ -209,6 +209,13 @@ Each iteration goes like $O(RN^2)$.
 
 We have implemented pseudolikelihood for the Ising model as detailed in \cite{Aurell:2012hi} in {\tt Pseudo}.
 
+\begin{figure}[htbp]\centering
+	\includegraphics[width=.85\linewidth,clip,trim={100 50 30 30}]{images/pseudo}
+\caption{Schematic of pseudolikelihood. Instead of fitting to the distribution of the entire model (circles), we maximize the likelihood of the marginal distribution of each spin independently.}
+\label{default}
+\end{figure}
+
+
 \subsection{Minimum Probability Flow}
 Minimum probability flow involves analytically approximating how the probability distribution \textit{changes} as we modify the \textit{configurations} \cite{SohlDickstein:2011im}. In the methods so far mentioned, the approach has been to maximize the objective (the likelihood function) by immediately taking the derivative with respect to the parameters. With MPF, we first posit a set of dynamics that will lead the data distribution to equilibrate to that of the model. When these distributions are equivalent, then there is no ``probability flow'' between them. This technique is closely related to score matching where instead we have continuous state spaces and can directly take the derivative with respect to the states without specifying dynamics \cite{Hyvarinen:2007ed}.
 
@@ -231,8 +238,9 @@ Finally, we must find the minimum of the objective function
 
 MPF satisfies a number of useful properties:
 
-[Typically with large systems, numerical precision errors can become a problem because of the exponential form of $p(\lambda_{\rm k})$. By taking the logarithm of the objective $K$ can be crucial to a working implementation.]
+%[Typically with large systems, numerical precision errors can become a problem because of the exponential form of $p(\lambda_{\rm k})$. By taking the logarithm of the objective $K$ can be crucial to a working implementation.]
 
+At each iteration, MPF must calculate the probability flow between all data states and all chosen neighboring states which takes $\mathcal{O}(n_{\rm data}n_{\rm neighbors}K)$ calculations.
 MPF is implemented in the {\tt MPF} class.
 
 
@@ -322,7 +330,7 @@ In CONIII, the selective cluster expansion method is implemented in the {\tt Clu
 	Method 	& Runtime per iteration & Exact? \\
 \hline
 	Exact 	& $\mathcal{O}(2^N N^2)$ & Yes\\
-	MPF		& $\mathcal{O}(n_{\rm data}N^2)$ & Sometimes\\
+	MPF		& $\mathcal{O}(n_{\rm data}n_{\rm neighbors}N^2)$ & Sometimes\\
 	MCH 	& $\mathcal{O}(n_{\rm sample}n_{\rm MC}N^2)$ & Yes\\
 	Pseudolikelihood & $\mathcal{O}(n_{\rm data}N^2)$ & $N\rightarrow\infty$\\
 	Cluster expansion & & ?\\
